--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
             <div class="presentation">
                 <p id="btsItalic">BTS SIO, option SISR</p>
                 <p id="phrasePresentation"><span id="boldPresentation">HELLO!</span> Je suis Hosni</p>
-                <p class="textPresentation">Après avoir obtenu mon BAC spé Maths, j'ai décidé de m'orienter vers le BTS SIO que propose l'école
-                    ENSITECH. Je suis passionné par l'informatique depuis mon plus jeune âge et je souhaite me former d'avantage
-                    dans ce domaine afin d'y bâtir une carrière professionnelle solide. Une fois le BTS en poche, je souhaite réaliser
-                    le bachelor <span class="bold">NETWORKS, SECURITY AND SYSTEMS</span>, pour consolider mes connaissances et en apprendre d'avantage.
-                <br/>J'espère qu'à travers ce portfolio vous prendrez du plaisir à me lire, tout comme j'ai pris du plaisir à le réaliser...
-                <br/>Pour en savoir plus, vous pouvez consulter mon CV.
+                <p class="textPresentation">Titulaire d'un BAC spé Maths, j'ai décidé de continuer mes études dans le domaine des systèmes et de l'architecture réseau.
+                    Admis à l’école d’enseignement supérieur ENSITECH en BTS SIO et passionné par l’informatique depuis mon plus jeune âge ,
+                    je souhaite continuer l'an prochain à me former dans ce domaine, plus précisement dans un bachelor <span class="bold">NETWORKS, SECURITY AND SYSTEMS</span>. 
+                    Tout cela, afin d’y bâtir une carrière professionnelle solide et de mettre à profit mes connaissances que j'aurais acquis.
+                    J'espère qu'à travers ce portfolio vous aurez autant de plaisir à consulter mes projets que j'en ai eu en les réalisant!
                 </p>
 
                 <button><a href="./doc/cv.pdf">Voir mon CV</a></button>
@@ -52,7 +51,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="competence">
         <div class="sectionTitre">
             <h2 class="titleTrait"><span class="trait"><span class="titleColor">MES</span> COMPÉTENCES</span></h2>
         </div>
