mise en place de la veille

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#">À propos</a></li>
                 <li><a href="#">Projets</a></li>
-                <li><a href="#">Veille</a></li>
+                <li><a href="./veille.html">Veille</a></li>
             </ul>
         </nav>
     </header>
