--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">À propos</a></li>
+                <li><a href="./index.html">Accueil</a></li>
+                <li><a href="./apropos.html">À propos</a></li>
                 <li><a href="#">Projets</a></li>
                 <li><a href="./veille.html">Veille</a></li>
             </ul>
@@ -99,21 +99,115 @@
         </div>
     </section>
 
-    <section>
+    <section id="outils">
         <div class="sectionTitre">
             <h2 class="titleTrait"><span class="trait"><span class="titleColor">LES</span> OUTILS</span></h2>
         </div>
+        <div class="outilsContainer">
+            <div class="cardOutils">
+                <img src="images/unbuntu.png" />
+                <p>UNBUNTU</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/wireshark.png" />
+                <p>WIRESHARK</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/kali.png" />
+                <p>KALI LINUX</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/virtualBox.png" />
+                <p>VIRTUAL BOX</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/glpi.png" />
+                <p>GLPI</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/dns.png" />
+                <p>DNS</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/vim.png" />
+                <p>VIM</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/bios.png" />
+                <p>BIOS</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/vmware.png" />
+                <p>VMWARE WORKSTATION</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/windows.png" />
+                <p>WINDOWS SERVER 2019</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/windowsxp.png" />
+                <p>WINDOWS VISTA</p>
+            </div>
+            <div class="cardOutils">
+                <img src="images/cisco.png" />
+                <p>CISCO PACKET TRACER</p>
+            </div>
+        </div>
     </section>
 
+    <section id="interet">
+        <div class="sectionTitre">
+            <h2 class="titleTrait"><span class="trait"><span class="titleColor">MES</span> CENTRES D'INTÉRÊT</span></h2>
+        </div>
+        <div class="interetContainer">
+            <div class="loisirFont">
+                <div class="textLoisir">
+                    <p>LOISIR</p>
+                    <ul>
+                        <li>MMA</li>
+                        <li>JIU-JITSU brésilien</li>
+                        <li>Musculation</li>
+                        <li>BasketBall</li>
+                        <li>Bricolage</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="techFont">
+                <div class="textLoisir">
+                    <p>TECHNOLOGIE</p>
+                    <ul>
+                        <li>Jeux-vidéos</li>
+                        <li>High-Tech</li>
+                        <li>Hacking</li>
+                        <li>Réseaux sociaux</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="cultureFont">
+                <div class="textLoisir">
+                    <p>CULTURE</p>
+                    <ul>
+                        <li>LECTURE</li>
+                        <li>Bénévolat</li>
+                        <li>Maraudes</li>
+                        <li>Cinéma</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="langageFont">
+                <div class="textLoisir">
+                    <p>LANGUES</p>
+                    <ul>
+                        <li>Français</li>
+                        <li>Anglais B1</li>
+                        <li>Arabe B2</li>
+                    </ul>
+                </div>
+            </div>
 
+        </div>
 
-
-
-
-
-
-
-
+    </section>
 
     <footer>
         <div class="containerFooter">
@@ -124,9 +218,8 @@
             <div class="contactFooter">
                 <h2>Contact</h2>
                 <ul>
-                    <li><img src="images/iphone.png" alt="iphone" class="logoContact"/><p>+33768073752</p></li>
-                    <li><img src="images/mail.png" alt="mail" class="sizelogo"/><p>hos95100@hotmail.fr</p></li>
-                    <li><img src="images/linkedin.png" alt="linkedin" class="sizelogo"/><p>Manoubi Hosni</p></li>
+                    <li><a href="mailto:hosni.manoubi@hotmail.com" class="link"></a><img src="images/mail.png" alt="mail" class="sizelogo"/></a></li>
+                    <li><a href="https://www.linkedin.com/in/hosni-manoubi"><img src="images/linkedin.png" alt="linkedin" class="sizelogo"/></a></li>
                 </ul>
             </div>
         </div>
