--- a/apropos.html
+++ b/apropos.html
@@ -97,6 +97,15 @@
             </div>
 
         </div>
+
+
+        <div class="hosni">
+        <button><a href="./doc/E4.pdf">Tableau de synthèse épreuve E4</a></button>
+        </div>
+
+
+
+        
     </section>
 
 
