--- a/apropos.html
+++ b/apropos.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/apropos.css">
-    <title>Page d'accueil</title>
+    <title>Page à propos</title>
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./apropos.html">À propos</a></li>
-                <li><a href="#">Projets</a></li>
+                <li><a href="./projet.html">Projets</a></li>
                 <li><a href="./veille.html">Veille</a></li>
             </ul>
         </nav>
@@ -33,6 +33,9 @@
                 <div id="sousTitle"><p>BTS SIO / MON ENTREPRISE</p></div>
                 <p class="textPresentation">Ici, je vais vous présenter ma formation BTS SIO, son rôle ainsi que ses débouchers.</p>
                 <p class="textPresentation">Nous verrons aussi quelle entreprise j'ai choisi pour mon alternance</p>
+                <div class="btnSynthese">
+                    <button><a href="./doc/e4.pdf">Tableau de synthèse épreuve E4</a></button>
+                </div>
             </div>
         </div>
     </section>
@@ -91,26 +94,14 @@
                 <p>Cette école est <span class="bold">payante</span> et garantit un <span class="bold">programme de qualité</span> pour ces élèves.</p>
                 <p>Durant ces deux année au sein du <span class="bold">pôle informatique en plein développement</span> j'ai pu apprendre à travailler en <span class="bold">équipe</span>, <span class="bold">écouté</span>, <span class="bold">mettre en oeuvre</span> et faire entendre <span class="bold">mes idées</span>.</p>
                 <p><span class="bold">Autonomie</span>, <span class="bold">gestion</span> et <span class="bold">détermination</span>  sont les principale compétence pour travailler au sein du pôle informatique de l'école Hanned.</p>
+                <p>N'hésitez pas à consulter le site de <a href="http://www.ecole-hanned.com/" class="site"><span class="bold">l'école Hanned.</span><img src="./images/click.gif" alt="cliquez" class="gif"/></a></p>
             </div>
             <div class="imageSio">
                 <img src="./images/entreprise.jpg" alt="entreprise" />
             </div>
 
         </div>
-
-
-        <div class="hosni">
-        <button><a href="./doc/E4.pdf">Tableau de synthèse épreuve E4</a></button>
-        </div>
-
-
-
-        
     </section>
-
-
-
-
 
     <footer>
         <div class="containerFooter">
