--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./apropos.html">À propos</a></li>
-                <li><a href="#">Projets</a></li>
+                <li><a href="./projet.html">Projets</a></li>
                 <li><a href="./veille.html">Veille</a></li>
             </ul>
         </nav>
