--- a/veille.html
+++ b/veille.html
@@ -20,9 +20,9 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
-                <li><a href="#">À propos</a></li>
-                <li><a href="#">Projets</a></li>
-                <li><a href="#">Veille</a></li>
+                <li><a href="./apropos.html">À propos</a></li>
+                <li><a href="./projet.html">Projets</a></li>
+                <li><a href="./veille.html">Veille</a></li>
             </ul>
         </nav>
     </header>
@@ -152,20 +152,6 @@
 
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer>
         <div class="containerFooter">
