--- a/apropos.html
+++ b/apropos.html
@@ -34,7 +34,7 @@
                 <p class="textPresentation">Ici, je vais vous présenter ma formation BTS SIO, son rôle ainsi que ses débouchers.</p>
                 <p class="textPresentation">Nous verrons aussi quelle entreprise j'ai choisi pour mon alternance</p>
                 <div class="btnSynthese">
-                    <button><a href="./doc/e4.pdf">Tableau de synthèse épreuve E4</a></button>
+                    <button><a href="./doc/e4Project.pdf">Tableau de synthèse épreuve E4</a></button>
                 </div>
             </div>
         </div>
