--- a/apropos.html
+++ b/apropos.html
@@ -31,7 +31,7 @@
             <div class="presentationApropos">
                 <div class="title"><p>À PROPOS</p></div>
                 <div id="sousTitle"><p>BTS SIO / MON ENTREPRISE</p></div>
-                <p class="textPresentation">Ici, je vais vous présenter ma formation BTS SIO, son rôle ainsi que ses débouchers.</p>
+                <p class="textPresentation">Ici, je vais vous présenter ma formation BTS SIO, son rôle ainsi que ses débouchés.</p>
                 <p class="textPresentation">Nous verrons aussi quelle entreprise j'ai choisi pour mon alternance</p>
                 <div class="btnSynthese">
                     <button><a href="./doc/e4Project.pdf">Tableau de synthèse épreuve E4</a></button>
@@ -90,7 +90,7 @@
                 <h2>MON <span>ENTREPRISE</span>.</h2>
                 <div class="souligner"></div>
                 <p>Ayant opté pour une <span class="bold">formation en alternance</span> dans le domaine de l'informatique, j'ai pour ces deux années consécutif trouver un poste en tant qu'<span class="bold">administrateur réseau</span> au sein du l'école Hanned.</p>
-                <p>L'objectif était de <span class="bold">renouvellé l'ensemble du parc informatique</span> et de <span class="bold">maintenir à jour</span> ce dernier. L'école Hanned conte une équipe de <span class="bold">40 personnes</span> répartit entre le primaire et le collège.</p>
+                <p>L'objectif était de <span class="bold">renouvellé l'ensemble du parc informatique</span> et de <span class="bold">maintenir à jour</span> ce dernier. L'école Hanned conte une équipe de <span class="bold">40 personnes</span> répartie entre le primaire et le collège.</p>
                 <p>Cette école est <span class="bold">payante</span> et garantit un <span class="bold">programme de qualité</span> pour ces élèves.</p>
                 <p>Durant ces deux année au sein du <span class="bold">pôle informatique en plein développement</span> j'ai pu apprendre à travailler en <span class="bold">équipe</span>, <span class="bold">écouté</span>, <span class="bold">mettre en oeuvre</span> et faire entendre <span class="bold">mes idées</span>.</p>
                 <p><span class="bold">Autonomie</span>, <span class="bold">gestion</span> et <span class="bold">détermination</span>  sont les principale compétence pour travailler au sein du pôle informatique de l'école Hanned.</p>
