--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="interetContainer">
             <div class="loisirFont">
                 <div class="textLoisir">
-                    <p>LOISIR</p>
+                    <p>LOISIRS</p>
                     <ul>
                         <li>MMA</li>
                         <li>JIU-JITSU brésilien</li>
@@ -187,7 +187,7 @@
                 <div class="textLoisir">
                     <p>CULTURE</p>
                     <ul>
-                        <li>LECTURE</li>
+                        <li>Lecture</li>
                         <li>Bénévolat</li>
                         <li>Maraudes</li>
                         <li>Cinéma</li>
