hosni faute orthographe

--- a/projet.html
+++ b/projet.html
@@ -224,7 +224,7 @@
                 <p class="titlePrjt">Architecture réseau de l’école Hanned en pleine création </p>
                 <p class="textePrjct">L'école Hanned, en plein essor, est en train de mettre en place son réseau informatique novateur pour soutenir l'éducation de demain. 
                     Doté d'une architecture réseau en plein développement, ce projet vise à fournir un réseau informatique facilitant l'apprentissage de ces élèves, l'accès aux ressources éducatives en ligne et facilitant la collaboration entre étudiants et enseignants. 
-                    Cette infrastructure modernisée promet une expérience d'apprentissage immersive et interactive, tout en garantissant la confidentialité des données et la fiabilité du réseau pour l'ensemble des utilisateur du parc informatiquel'école Hanned.
+                    Cette infrastructure modernisée promet une expérience d'apprentissage immersive et interactive, tout en garantissant la confidentialité des données et la fiabilité du réseau pour l'ensemble des utilisateur du parc informatique de l'école Hanned.
                 </p>
                 
                 <button class="btnPrjt"><a href="./doc/projets/architecture.pdf">VOIR PDF</a></button>
@@ -330,7 +330,7 @@
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Active directory Windows Server 2019</p>
-                <p class="textePrjct">Le projet Active Directory sur Windows Server 2019 offre à notre entreprise une gestion centralisée des identités et des ressources informatiques.
+                <p class="textePrjct">Le projet Active Directory sur Windows Server 2019 offre à notre organisation une gestion centralisée des identités et des ressources informatiques.
                     Cette solution robuste permet une sécurisation efficace des accès, une simplification de la gestion des utilisateurs et une automatisation des processus liés à l'administration du réseau. 
                     En facilitant la gestion des politiques de sécurité, des groupes et des autorisations, ce déploiement renforce la stabilité et la fiabilité de notre infrastructure, garantissant une meilleure productivité 
                     et une protection accrue des données sensibles.
