--- a/veille.html
+++ b/veille.html
@@ -32,7 +32,7 @@
             <div class="introVeille">
                 <div class="title">VEILLE TECHNOLOGIQUE</div>
                 <p class="texteVeille">
-                    Ce jeudi 4 mai 2023 Apple a annoncé la fin des mots de passe suivi par Microsoft et Google
+                    Ce jeudi 4 mai 2023 Apple a annoncé la fin des mots de passe suivi par Microsoft et Google.
                     Trop vieux et démodés,  comment <span class="bold">passkeys</span> va-t-elle remplacer les mots de passe ?
                 </p>
                 <p class="texteVeille">
