--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
 
     <section>
         <div class="aboutContainer">
-            <h1>ABOUT<span class="titleColor"> ME</span></h1>
-            <p>Dans cette partie, vous en saurez plus sur <span class="bold">mes compétences</span> en langages de programmation, <span class="bold">les outils</span> que j'ai appris à utiliser, ainsi que
-                sur <span class="bold">mes centres d'intérêt.</span></p>
+            <div class="centerElem">
+                <h1>ABOUT<span class="titleColor"> ME</span></h1>
+                <p>Dans cette partie, vous en saurez plus sur <span class="bold">mes compétences</span> en langages de programmation, <span class="bold">les outils</span> que j'ai appris à utiliser, ainsi que
+                    sur <span class="bold">mes centres d'intérêt.</span></p>
+            </div>
+            
         </div>
     </section>
 
