--- a/projet.html
+++ b/projet.html
@@ -145,6 +145,38 @@
             </div>
         </div>
 
+    </div>
+    <div class="cardProjets">
+        <div class="imgPrjct">
+            <img src="./images/nas.jpg" alt="projet" />
+        </div>
+        <div class="txtProject">
+            <p class="titlePrjt">Photorec</p>
+            <p class="textePrjct">Photorec est un logiciel de récupération de données open source conçu pour restaurer des fichiers perdus ou supprimés accidentellement
+                 à partir de disques durs, de cartes mémoire et d'autres supports de stockage. Il utilise des algorithmes avancés pour analyser le contenu du support 
+                 et identifier les signatures de fichiers, permettant ainsi de récupérer une variété de formats de fichiers, y compris des images, des vidéos et des documents. 
+                 PhotoRec est réputé pour sa fiabilité et sa capacité à fonctionner sur une grande variété de systèmes d'exploitation, y compris Windows, macOS et Linux. 
+                 Il fonctionne en lecture seule, ce qui signifie qu'il n'écrit pas sur le support d'origine, minimisant ainsi les risques de corruption des données lors du processus 
+                 de récupération.</p>
+
+            <button class="btnPrjt"><a href="./doc/projets/Photorec.pdf">VOIR PDF</a></button>
+
+        </div>
+
+        <div class="cardProjets">
+            <div class="imgPrjct">
+                <img src="./images/nas.jpg" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">Sauvegarde et mise à jour </p>
+                <p class="textePrjct">La sauvegarde Windows Server 2019 assure la sécurité des données en permettant des sauvegardes 
+                    complètes et une récupération en cas de défaillance. Elle offre diverses options de stockage et de planification. 
+                    L'option de mise à jour est essentielle pour maintenir la sécurité et la stabilité du système. Elle installe les derniers correctifs et améliorations fonctionnelles. 
+                    Ensemble, elles garantissent la fiabilité et la sécurité des serveurs Windows 2019.</p>
+                <button class="btnPrjt"><a href="./doc/projets/Sauvegarde de Windows Server 2019 et mise a jour régulière.pdf">VOIR PDF</a></button>
+    
+            </div>
+
     </section>
 
     <section id="partie2">
@@ -337,6 +369,40 @@
 
                 </p>
                 <button class="btnPrjt"><a href="./doc/projets/active.pdf">VOIR PDF</a></button>
+            </div>
+        </div>
+
+
+        <div class="cardProjets">
+            <div class="imgPrjct">
+                <img src="./images/activeDirectory.jpg" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">Squid proxy</p>
+                <p class="textePrjct">Squid Proxy est un serveur proxy open source largement utilisé dans les environnements réseau.
+                     Il permet à l'école Hanned de contrôler et de sécuriser l'accès à Internet pour ses utilisateurs. 
+                     En fournissant des fonctionnalités telles que la mise en cache, le filtrage du contenu et la limitation de bande passante,
+                      Squid optimise les performances du réseau et renforce la sécurité. Sa configuration flexible et ses capacités de journalisation en font 
+                      un outil précieux pour la gestion des ressources réseau. En outre, Squid offre des options de personnalisation avancées, permettant à l'école Hanned 
+                      de répondre aux besoins spécifiques de sa salle informatique.
+                </p>
+                <button class="btnPrjt"><a href="./doc/projets/Proxy-Squid.pdf">VOIR PDF</a></button>
+            </div>
+        </div>
+
+        <div class="cardProjets">
+            <div class="imgPrjct">
+                <img src="./images/nginx.png" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">Open-VPN</p>
+                <p class="textePrjct">OpenVPN est un logiciel open-source permettant de créer un réseau privé virtuel (VPN) sécurisé.
+                     Son installation implique la configuration des serveurs et des clients, ainsi que la gestion des certificats de sécurité. 
+                     À l'école Hanned, OpenVPN offre un moyen fiable et sécurisé pour les professeurs et la direction d'accéder aux ressources réseau internes à distance, 
+                     tout en garantissant la confidentialité des données échangées. Il permet également de contourner les restrictions géographiques et d'assurer la 
+                     confidentialité des communications, renforçant ainsi la sécurité des données sensibles de l'établissement.
+                </p>
+                <button class="btnPrjt"><a href="./doc/projets/Open-Vpn.pdf">VOIR PDF</a></button>
             </div>
         </div>
 
