--- a/projet.html
+++ b/projet.html
@@ -145,27 +145,27 @@
             </div>
         </div>
 
-    </div>
-    <div class="cardProjets">
-        <div class="imgPrjct">
-            <img src="./images/nas.jpg" alt="projet" />
-        </div>
-        <div class="txtProject">
-            <p class="titlePrjt">Photorec</p>
-            <p class="textePrjct">Photorec est un logiciel de récupération de données open source conçu pour restaurer des fichiers perdus ou supprimés accidentellement
-                 à partir de disques durs, de cartes mémoire et d'autres supports de stockage. Il utilise des algorithmes avancés pour analyser le contenu du support 
-                 et identifier les signatures de fichiers, permettant ainsi de récupérer une variété de formats de fichiers, y compris des images, des vidéos et des documents. 
-                 PhotoRec est réputé pour sa fiabilité et sa capacité à fonctionner sur une grande variété de systèmes d'exploitation, y compris Windows, macOS et Linux. 
-                 Il fonctionne en lecture seule, ce qui signifie qu'il n'écrit pas sur le support d'origine, minimisant ainsi les risques de corruption des données lors du processus 
-                 de récupération.</p>
+        <div class="cardProjets">
+            <div class="imgPrjct">
+                <img src="./images/PHOTOREC.png" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">Photorec</p>
+                <p class="textePrjct">Photorec est un logiciel de récupération de données open source conçu pour restaurer des fichiers perdus ou supprimés accidentellement
+                    à partir de disques durs, de cartes mémoire et d'autres supports de stockage. Il utilise des algorithmes avancés pour analyser le contenu du support 
+                    et identifier les signatures de fichiers, permettant ainsi de récupérer une variété de formats de fichiers, y compris des images, des vidéos et des documents. 
+                    PhotoRec est réputé pour sa fiabilité et sa capacité à fonctionner sur une grande variété de systèmes d'exploitation, y compris Windows, macOS et Linux. 
+                    Il fonctionne en lecture seule, ce qui signifie qu'il n'écrit pas sur le support d'origine, minimisant ainsi les risques de corruption des données lors du processus 
+                    de récupération.</p>
 
-            <button class="btnPrjt"><a href="./doc/projets/Photorec.pdf">VOIR PDF</a></button>
+                <button class="btnPrjt"><a href="./doc/projets/Photorec.pdf">VOIR PDF</a></button>
 
+            </div>
         </div>
 
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/nas.jpg" alt="projet" />
+                <img src="./images/sauvegarde.jpg" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Sauvegarde et mise à jour </p>
@@ -176,6 +176,7 @@
                 <button class="btnPrjt"><a href="./doc/projets/Sauvegarde de Windows Server 2019 et mise a jour régulière.pdf">VOIR PDF</a></button>
     
             </div>
+        </div>
 
     </section>
 
@@ -375,7 +376,7 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/activeDirectory.jpg" alt="projet" />
+                <img src="./images/Squid-cache_logo.jpg" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Squid proxy</p>
@@ -392,7 +393,7 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/nginx.png" alt="projet" />
+                <img src="./images/logo_openvpn.png" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Open-VPN</p>
