--- a/projet.html
+++ b/projet.html
@@ -165,7 +165,7 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/sauvegarde.jpg" alt="projet" />
+                <img src="./images/sauve.png" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Sauvegarde et mise à jour </p>
