--- a/projet.html
+++ b/projet.html
@@ -258,6 +258,22 @@
         </div>
         <div class="cardProjets">
             <div class="imgPrjct">
+                <img src="./images/pi-hole.png" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">Pi-hole</p>
+                <p class="textePrjct">
+                    Pi-hole est un logiciel open-source installable sur Ubuntu, agissant en tant que serveur DNS pour bloquer les publicités et le suivi en ligne. Après configuration,
+                     il offre une protection contre les publicités indésirables, 
+                    une gestion des clients, et des statistiques détaillées sur le trafic DNS, améliorant ainsi la sécurité et la confidentialité sur le réseau.
+                </p>
+                
+                <button class="btnPrjt"><a href="./doc/projets/Pi-hole.pdf">VOIR PDF</a></button>
+
+            </div>
+        </div>
+        <div class="cardProjets">
+            <div class="imgPrjct">
                 <img src="./images/google analystics.png" alt="projet" />
             </div>
             <div class="txtProject">
