modif farah et pihole image

--- a/projet.html
+++ b/projet.html
@@ -274,7 +274,7 @@
         </div>
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/google analystics.png" alt="projet" />
+                <img src="./images/google_analystics.png" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Google Analystics</p>
