--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="outilsContainer">
             <div class="cardOutils">
                 <img src="images/unbuntu.png" />
-                <p>UNBUNTU</p>
+                <p>UBUNTU</p>
             </div>
             <div class="cardOutils">
                 <img src="images/wireshark.png" />
