--- a/projet.html
+++ b/projet.html
@@ -84,7 +84,7 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/glpi.jpg" alt="projet" />
+                <img src="./images/glpi1.png" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">GLPI</p>
