--- a/projet.html
+++ b/projet.html
@@ -129,7 +129,7 @@
         </div>
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/googleDrive.jpg" alt="projet" />
+                <img src="./images/googleDrive.png" alt="projet" />
             </div>
             <div class="txtProject">
                 <p class="titlePrjt">Google drive</p>
