--- a/projet.html
+++ b/projet.html
@@ -331,6 +331,23 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
+                <img src="./images/powershell.jpg" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">PowerShell script d'automatisation</p>
+                <p class="textePrjct">Durant mon stage, j'ai développé un script PowerShell destiné à automatiser la création de plus d'une centaine de profils utilisateur pour 
+                    les élèves dans le domaine Active Directory. Le script récupère les informations à partir d'un fichier Excel contenant le nom, prénom et mot de passe des élèves. 
+                    Le nom d'utilisateur est généré en prenant la première lettre du prénom suivie d'un point et du nom de famille, simplifiant ainsi le processus 
+                    de gestion des comptes et assurant une intégration efficace des nouveaux utilisateurs.
+                </p>
+                
+                <button class="btnPrjt"><a href="./doc/projets/Shell.pdf">VOIR PDF</a></button>
+
+            </div>
+        </div>
+
+        <div class="cardProjets">
+            <div class="imgPrjct">
                 <img src="./images/baie.png" alt="projet" />
             </div>
             <div class="txtProject">
