--- a/projet.html
+++ b/projet.html
@@ -356,31 +356,16 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
-                <img src="./images/ciscoP.jpg" alt="projet" />
+                <img src="./images/routage.jpg" alt="projet" />
             </div>
             <div class="txtProject">
-                <p class="titlePrjt">Routage dynamique</p>
-                <p class="textePrjct">Ce projet personnel sur Cisco Packet Tracer se concentre sur la mise en place d'un routage dynamique. 
-                    À travers ce projet, j'ai conçu un réseau virtuel complexe en utilisant divers équipements Cisco. 
-                    En mettant en œuvre des protocoles de routage dynamique, j'ai optimisé la connectivité du réseau, permettant une gestion efficace des chemins de transmission d'informations. 
-                    Cette expérience m'a permis d'approfondir mes compétences en configuration réseau, tout en comprenant les principes fondamentaux du routage dynamique, cruciaux dans le domaine des réseaux informatiques.
+                <p class="titlePrjt">Routage dynamique & statique</p>
+                <p class="textePrjct">Dans le cadre d'un projet personnel, j'ai configuré et comparé le routage statique et dynamique sur Cisco Packet Tracer. Pour le routage statique, 
+                    j'ai manuellement configuré les routes sur chaque routeur, garantissant un contrôle précis mais nécessitant une maintenance élevée. Pour le routage dynamique, 
+                    j'ai utilisé les protocoles RIP et OSPF, qui permettent aux routeurs de partager automatiquement les informations de routage et de s'adapter aux changements de réseau.
+                     Ce projet m'a permis de mieux comprendre les avantages et inconvénients de chaque méthode et de renforcer mes compétences en administration de réseaux.
                 </p>
-                <button class="btnPrjt"><a href="./doc/projets/routage.pdf">VOIR PDF</a></button>
-            </div>
-        </div>
-
-        <div class="cardProjets">
-            <div class="imgPrjct">
-                <img src="./images/ciscopacket.png" alt="projet" />
-            </div>
-            <div class="txtProject">
-                <p class="titlePrjt">Routage statique</p>
-                <p class="textePrjct">Mon projet personnel sur Cisco Packet Tracer consiste en la mise en place d'un routage statique. 
-                    À travers cette simulation, j'ai configuré des routes fixes pour optimiser le transfert des données au sein d'un réseau. 
-                    Grâce à l'utilisation de Cisco Packet Tracer, j'ai pu affiner mes compétences en configuration réseau avec l'utilisation du CLI, 
-                    contribuant ainsi à une meilleure compréhension des principes fondamentaux du routage.
-                </p>
-                <button class="btnPrjt"><a href="./doc/projets/routagestatic.pdf">VOIR PDF</a></button>
+                <button class="btnPrjt"><a href="./doc/projets/routage-static-dynamic.pdf">VOIR PDF</a></button>
             </div>
         </div>
 
