yodeck routage image

--- a/projet.html
+++ b/projet.html
@@ -199,6 +199,24 @@
 
         <div class="cardProjets">
             <div class="imgPrjct">
+                <img src="./images/yodeck.jpg" alt="projet" />
+            </div>
+            <div class="txtProject">
+                <p class="titlePrjt">Yodeck</p>
+                <p class="textePrjct">
+                    Durant mon stage, j'ai utilisé Yodeck pour mettre en place un système d'affichage dynamique au sein d'un collège, intégrant plusieurs compétences en informatique, 
+                    développement, réseau et design. J'ai créé des diapositives affichant les horaires de cours en temps réel, l'heure et la météo en temps réel, ainsi que des comptes à 
+                    rebours pour les événements, pour la date j'ai opté pour un code en HTML et CSS. Ce projet a permis de renforcer la communication au sein de l'établissement 
+                    en utilisant diverses technologies modernes. J'ai ainsi développé mes compétences techniques et collaboratives, tout en contribuant à un environnement éducatif interactif et informatif.
+                </p>
+                
+                <button class="btnPrjt"><a href="./doc/projets/yodeck.pdf">VOIR PDF</a></button>
+
+            </div>
+        </div>
+
+        <div class="cardProjets">
+            <div class="imgPrjct">
                 <img src="./images/liteManager.png" alt="projet" />
             </div>
             <div class="txtProject">
