--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
             <div class="presentation">
                 <p id="btsItalic">BTS SIO, option SISR</p>
                 <p id="phrasePresentation"><span id="boldPresentation">HELLO!</span> Je suis Hosni</p>
-                <p class="textPresentation">Titulaire d'un BAC spé Maths, j'ai décidé de continuer mes études dans le domaine des systèmes et de l'architecture réseau.
-                    Admis à l’école d’enseignement supérieur ENSITECH en BTS SIO et passionné par l’informatique depuis mon plus jeune âge ,
-                    je souhaite continuer l'an prochain à me former dans ce domaine, plus précisement dans un bachelor <span class="bold">NETWORKS, SECURITY AND SYSTEMS</span>. 
-                    Tout cela, afin d’y bâtir une carrière professionnelle solide et de mettre à profit mes connaissances que j'aurais acquis.
-                    J'espère qu'à travers ce portfolio vous aurez autant de plaisir à consulter mes projets que j'en ai eu en les réalisant!
+                <p class="textPresentation">Aministrateur réseau et sécurité 
                 </p>
 
                 <button><a href="./doc/cv.pdf">Voir mon CV</a></button>
