--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <section>
         <div class="banniere">
             <div class="presentation">
-                <p id="btsItalic">BTS SIO, option SISR</p>
+                <p id="btsItalic">étudiant en architecture réseau</p>
                 <p id="phrasePresentation"><span id="boldPresentation">HELLO!</span> Je suis Hosni</p>
                 <p class="textPresentation">Aministrateur réseau et sécurité 
                 </p>
 
-                <button><a href="./doc/cv.pdf">Voir mon CV</a></button>
+                <button><a href="./doc/cv.pdf" >Voir mon CV</a></button>
             </div>
         </div>
     </section>
