--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="presentation">
                 <p id="btsItalic">étudiant en architecture réseau</p>
                 <p id="phrasePresentation"><span id="boldPresentation">HELLO!</span> Je suis Hosni</p>
-                <p class="textPresentation">Aministrateur réseau et sécurité 
+                <p class="textPresentation">Bonne lecture !
                 </p>
 
                 <button><a href="./doc/cv.pdf" >Voir mon CV</a></button>
